assets/css/main.css
/* ... */
#sponsors {
  padding-bottom: 100px;
  padding-top: 100px;
}


.secondary-sponors ul:last-child {
  padding-bottom: 100px!important;
}


#sponsors ul {
 display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 0;
}


.secondary-sponsors ul {
  height: 300px;
}



.primary-sponsors ul {
  height: auto;
}

.secondary-sponsors img {

  width: auto;
  max-width: 250px;
  height: auto;
  text-decoration: none;
}

.primary-sponsors img {

  width: auto;
  max-width: 500px;
  height: auto;
  text-decoration: none;
}


#sponsors li {
  padding-top: 50px;
  list-style-type: none;
  display: inline-block;
  text-align: center;

}

.secondary-sponsors li:first-child {
  padding-bottom: 50px;
}



#sponsors .col-sm-6m ul, #sponsors .col-md-6 ul, #sponsors .col-lg-6 ul{
  padding: 0!important;
}


#sponsors .col-sm-6m, #sponsors .col-md-6, #sponsors .col-lg-6{
  padding: 0!important;
}





/* ---------- */
@media (min-width: 767px) {



  ul.nav.navbar-nav {
    float: none;
    margin: 0;
  }


  .navbar-nav {
    float: none;
    text-align: center;
    position: relative;
    width: 400px;
    margin: 0;
    display: none;
  }

  .nav>li {
  display: inline-block;
  }

  .navbar-nav>li {
  float: none;
  }




  .nav>li>a {
  padding-right: 1em;
  }

 /*

  .navbar-default .navbar-nav > li > a {
    right: -20px;
  }

  */
  .navbar-default .navbar-collapse, .navbar-default .navbar-form{
  margin-left: 50%;
    position: relative;
    left: 50%;
    top: 425px;
    padding-left: 34px;
  }


  body {
    padding-top: 0px;
  }

  .navbar-default {
    background-color: rgba(0,0,0,0);
    position: absolute;
    z-index: 2;
    text-align: center;


  }

 .navbar-default .navbar-nav > li > a {
   color: #fff;
   text-transform: uppercase;
   font-family: 'Fjalla One', sans-serif;


   font-size: 1.25em;
 }

  .navbar-default .navbar-nav > li > a:hover {
    color: rgb(224, 224, 224);
  }


 .navbar-collapse.collapse {
   display: none;
 }


 #faqs .col-sm-12:first-child, #faqs .col-md-12:first-child, #faqs .col-lg-12:first-child {
    text-align: center;
  }


}
/* ---------- */













/* ---------- */

@media (max-width: 767px) {

  .navbar-default {
    background-color: #333;
  }

  .navbar-default .navbar-toggle {
    border-color: #474747;
  }

  .navbar-default .navbar-toggle .icon-bar {
    background-color: #3d3d3d;
  }

  .navbar-default .navbar-toggle:hover {
    background-color: #474747;
  }

  .navbar-default .navbar-nav>li>a {
    color: rgb(239, 239, 239);
    text-transform: lowercase;
  }

  .navbar-default .navbar-nav>li>a:hover {
    color: rgb(194, 194, 194);
  }

  .navbar-default .navbar-toggle:focus {
    background-color: #474747;
  }

  .navbar-collapse {
    box-shadow: none;
  }

  .navbar-default {
     position: absolute;
     z-index: 2;
     width: 100%;
   }

  .navbar-nav {
    float: none;
    text-align: center;
  }

  .primary-sponsors img {
    max-width: 350px;
  }

  .secondary-sponsors img {
    max-width: 200px;
  }

  #sponsors li:first-child {
    padding-top: 0;
  }


  .secondary-sponsors ul {
    padding-bottom: 0;
  }


  .primary-sponsors ul>li {
    padding-bottom: 25px;
  }

  #faqs .col-sm-12>p, #faqs .col-md-12>p, #faqs .col-lg-12>p {
    text-align: justify!important;
    padding-bottom: 2em!important;
  }

  #faqs .col-sm-12>span, #faqs .col-md-12>span, #faqs .col-lg-12>span {
    padding: 0 1em;
  }

}
/* ---------- */














/* BACK TO TOP BUTTON */
.go-top {
	position: fixed;
	bottom: 1em;
	right: 1em;
	text-decoration: none;
	background-color: rgba(92, 92, 92, .3);
  color: rgba(239, 239, 239, .7);
	font-size: 14px;
	padding: 1em;
	display: none;
    border-radius: 4px;
    z-index: 999;
}

.go-top:hover {
	background-color: rgba(92, 92, 92, .7);
  color: rgba(239, 239, 239, .8);
  text-decoration: none;
}
/* ---------- */
















#landing {


    position: relative;
		background: url(../img/circuit.jpg) no-repeat;
		background-attachment: fixed;
		background-size: cover;
    background-position: 0px 0px, center;

}




#landing:before
		{
			content: '';
			position: absolute;
			left: 0;
			top: 0;
			width: 100%;
			height: 100%;
			background: rgba(64, 64, 64, 0.5);
		}




@media screen and (-webkit-min-device-pixel-ratio:0) {

.triangle {
  position: relative;
  margin: 0 auto -30px auto;
  width: 0;
  height: 0;
  border-top: 30px solid rgba(64,64,64,0.5);
  border-left: 175px dotted rgba(232, 232, 232, 255);
  border-right: 175px dotted rgba(232, 232, 232, 255);
  border-bottom: 0 dotted rgba(255,255,255,0);
  line-height: 0;


    position: relative;
		background: url(../img/circuit.jpg) no-repeat;
		background-attachment: fixed;
		background-size: cover;
    background-position: 0px 0px, center;
}



}














.main-navigation {
  color: #fff;
  text-transform: uppercase;
  font-family: 'Fjalla One', sans-serif;
  font-size: 1.5em;
  z-index: 5;
  margin-top: -50px;
  background-color: rgba(255, 255, 255, 0);
  position: relative;
  left: -19px;
}



.main-navigation li {
  display: inline-block;
  z-index: 5;
  padding-right: 1em;
  padding-left: 1em;
}

.main-navigation li > a:hover {
  text-decoration: none;
  color: rgb(224, 224, 224);
}

.main-navigation li > a:focus {
  color: inherit;
  text-decoration: none;
}

.main-navigation li > a {

 color: inherit;
}










#organization-desc {
    padding-top: 30px;
    color: white;
}














.navbar-logo {
    padding-top: 6px;
    padding-left: 10px;
    float: left;
}




.banner img {
    height: 650px;
    padding-left: 125px;
    padding-top: 100px;
    position: absolute;
    bottom: -145px;
    opacity: .4;
}





#brand img {
  width: 100%;
  height: auto;
  position: relative;
  padding-top: 85px;
  padding-bottom: 85px;
}

#brand h1 {
  padding-bottom: 30px;
  font-weight: 700;
  color: #efefef;
}
/* ... */

